<resources>
    <string name="app_name_short">OpenYOLO</string>

    <!-- Retrieve Test -->
    <string name="retrieve_button_label">Get Credential</string>
    <string name="retrieve_button_content_description">Retrieve a credential</string>

    <string name="retrieve_unknown_response">Unknown retrieve response</string>
    <string name="retrieve_no_provider_available">No provider available for credential request</string>
    <string name="retrieve_bad_request">Bad credential request</string>
    <string name="retrieve_no_credentials">No credentials available</string>
    <string name="retrieve_user_canceled">User canceled retrieve request</string>
    <string name="retrieve_manual_auth">User requests manual auth</string>
    <string name="retrieve_provider_timed_out">Providers timed out</string>

    <string name="custom_authentication_method_hint">Custom</string>
    <string name="authentication_method_section_title">Authentication Methods:</string>

    <string name="facebook_authentication_method_checkbox_text">https://facebook.com</string>
    <string name="google_authentication_method_checkbox_text">https://accounts.google.com</string>
    <string name="email_authentication_method_checkbox_text">openyolo://email</string>
    <string name="phone_authentication_method_checkbox_text">openyolo://phone</string>
    <string name="username_authentication_method_checkbox_text">openyolo://username</string>

    <string name="require_user_mediation_checkbox_text">Require User Mediation</string>
    <string name="retrieve_other_section_title">Other</string>


    <!-- Save Test -->
    <string name="save_button_label">Save Credential</string>
    <string name="save_button_content_description">Save a credential</string>


    <string name="save_invalid_request">Invalid Save Request</string>

    <string name="save_result_unknown">Unknown save result</string>
    <string name="save_no_provider_available">No provider available for save request</string>
    <string name="save_result_saved">Credential Saved</string>
    <string name="save_result_bad_request">Malformed save request</string>
    <string name="save_result_provider_refused">Provider refused save request</string>
    <string name="save_result_user_canceled">User canceled save request</string>
    <string name="save_result_user_refused">User refused save request</string>

    <!-- Hint Test -->
    <string name="hint_button_label">Get Hint</string>
    <string name="hint_button_content_description">Hint for new account creation</string>

    <string name="hint_unknown_response">Unknown hint response</string>
    <string name="hint_no_provider_available">No provider available for hint request</string>
    <string name="hint_bad_request">Bad hint request</string>
    <string name="hint_none_available">No hints available</string>
    <string name="hint_user_canceled">User canceled hint request</string>
    <string name="hint_manual_auth">User requests manual auth</string>

    <!-- Delete Test -->
    <string name="delete_button_label">Delete Credential</string>
    <string name="delete_button_content_description">Delete a credential</string>

    <string name="delete_result_unknown_response">Unknown delete response</string>
    <string name="delete_no_provider_available">"No provider available for this delete request</string>
    <string name="delete_result_deleted">Credential deleted</string>
    <string name="delete_result_no_matching_credential">No matching credential to delete</string>
    <string name="delete_result_provider_refused">Provider refused deletion</string>
    <string name="delete_result_user_canceled">User canceled deletion</string>
    <string name="delete_result_user_refused">User refused deletion</string>
    <string name="delete_result_bad_request">Bad delete request</string>

    <!-- Credential -->
    <string name="id_field_hint">Identifier</string>
    <string name="generate_id_button_content_description">Generate a random identifier</string>

    <string name="password_field_hint">Password</string>
    <string name="generate_password_button_content_description">Generate a random password</string>

    <string name="display_name_field_hint">Display name</string>
    <string name="generate_display_name_button_content_description">Generate random display name</string>

    <string name="profile_picture_field_hint">Profile Picture URI</string>
    <string name="profile_picture_view_content_description">Profile picture display</string>
    <string name="generate_profile_picture_button_content_description">Generate a random profile picture URI</string>

    <string name="authentication_method_field_hint">Authentication Method</string>
    <string name="google_provider_button_content_description">Set federation provider to Google</string>
    <string name="facebook_provider_button_content_description">Set federation provider to Facebook</string>
    <string name="open_yolo_email_button_content_description">Set authentication method to Email</string>


    <!-- Other Test -->
    <string name="disable_auto_sign_in_button_label">Disable Auto Sign In</string>
    <string name="disable_auto_sign_in_button_content_description">Disable Auto Sign In</string>
    <string name="client_version_text">Client version: %1$s</string>

    <!-- Misc -->
    <string name="authentication_field_required">Must select or enter valid authentication method</string>
    <string name="unknown_response">Unknown response</string>
    <string name="response">Response Properties</string>
    <string name="request">Request Properties</string>
    <string name="invalid_credential_data">Credential data is invalid</string>
    <string name="token_providers_header">Supported token providers</string>
    <string name="use_google_token_provider">Request Google ID tokens</string>
    <string name="token_provider_uri_field_hint">Token provider URI</string>
    <string name="client_id_field_hint">Client ID</string>
    <string name="nonce_field_hint">Nonce</string>
    <string name="clear_token_provider">Clear</string>
    <string name="no_token">No token returned</string>
    <string name="id_token_view_header">ID Token</string>

</resources>
