<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  style="@style/DemoContent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
      style="@style/Headline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/request"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:orientation="horizontal">

      <android.support.design.widget.TextInputLayout
        android:id="@+id/id_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/authentication_method_text_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/authentication_method_field_hint"
          android:inputType="textNoSuggestions|textVisiblePassword"/>
      </android.support.design.widget.TextInputLayout>

      <ImageButton
        android:id="@+id/openyolo_email_provider_button"
        style="@style/SideButton"
        android:contentDescription="@string/open_yolo_email_button_content_description"
        app:srcCompat="@drawable/account_box_24dp"/>

      <ImageButton
        android:id="@+id/google_provider_button"
        style="@style/SideButton"
        android:contentDescription="@string/google_provider_button_content_description"
        app:srcCompat="@drawable/google_24dp"/>

      <ImageButton
        android:id="@+id/facebook_provider_button"
        style="@style/SideButton"
        android:contentDescription="@string/facebook_provider_button_content_description"
        app:srcCompat="@drawable/facebook_24dp"/>

    </LinearLayout>

    <Button
      android:id="@+id/hint_button"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_gravity="center_horizontal"
      android:contentDescription="@string/hint_button_content_description"
      android:text="@string/hint_button_label"
      android:theme="@style/GreenButtonThemeOverlay"/>

    <TextView
      style="@style/Headline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/response"/>

    <org.openyolo.testapp.CredentialView
      android:id="@+id/hint_credential"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    </org.openyolo.testapp.CredentialView>

  </LinearLayout>
</android.support.v4.widget.NestedScrollView>
