<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/token_providers_header"
      android:textAppearance="@style/TextAppearance.AppCompat.Title" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="horizontal"
      tools:ignore="ButtonStyle">

    <Button
        android:id="@+id/use_google"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/use_google_token_provider"/>

    <Button
        android:id="@+id/clear_token_provider"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/clear_token_provider"/>

  </LinearLayout>


  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/token_provider_uri_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/token_provider_uri_field_hint"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/client_id_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_id_field_hint"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/nonce_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nonce_field_hint"/>

  </android.support.design.widget.TextInputLayout>

</LinearLayout>