<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
      android:id="@+id/id_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/id_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_field_hint"
        android:inputType="textNoSuggestions|textVisiblePassword"
        />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
      android:id="@+id/generate_id_button"
      style="@style/SideButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/generate_id_button_content_description"
      app:srcCompat="@drawable/dice_24dp"/>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
      android:id="@+id/password_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_field_hint"
        android:inputType="textVisiblePassword"
        android:typeface="monospace"/>

    </android.support.design.widget.TextInputLayout>

    <ImageButton
      android:id="@+id/generate_password_button"
      style="@style/SideButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/generate_password_button_content_description"
      app:srcCompat="@drawable/dice_24dp"/>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
      android:id="@+id/display_name_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/display_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/display_name_field_hint"
        android:inputType="textPersonName"
        />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
      android:id="@+id/generate_display_name_button"
      style="@style/SideButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/generate_display_name_button_content_description"
      app:srcCompat="@drawable/dice_24dp"/>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
      android:id="@+id/federation_provider_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/authentication_method_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/authentication_method_field_hint"
        android:inputType="textUri"
        />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
      android:id="@+id/openyolo_id_and_password_provider_button"
      style="@style/SideButton"
      android:contentDescription="@string/open_yolo_id_and_password_button_content_description"
      app:srcCompat="@drawable/account_box_24dp"/>

    <ImageButton
      android:id="@+id/google_provider_button"
      style="@style/SideButton"
      android:contentDescription="@string/google_provider_button_content_description"
      app:srcCompat="@drawable/google_24dp"/>

    <ImageButton
      android:id="@+id/facebook_provider_button"
      style="@style/SideButton"
      android:contentDescription="@string/facebook_provider_button_content_description"
      app:srcCompat="@drawable/facebook_24dp"/>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
      android:id="@+id/profile_picture_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/profile_picture_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_picture_field_hint"
        android:inputType="textUri"
        />

    </android.support.design.widget.TextInputLayout>

    <ImageView
      android:id="@+id/profile_picture_view"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_gravity="center"
      android:contentDescription="@string/profile_picture_view_content_description"/>

    <ImageButton
      android:id="@+id/generate_profile_picture_button"
      style="@style/SideButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/generate_profile_picture_button_content_description"
      app:srcCompat="@drawable/dice_24dp"/>

  </LinearLayout>

</LinearLayout>