<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_header"
                android:layout_gravity="center_horizontal"
                style="@style/Base.TextAppearance.AppCompat.Headline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/retrieve_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/retrieve_button_label"
                    android:contentDescription="@string/retrieve_button_content_description"
                    android:theme="@style/BlueButtonThemeOverlay"
                    style="@style/Widget.AppCompat.Button.Colored" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/save_button_label"
                    android:contentDescription="@string/save_button_content_description"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/GreenButtonThemeOverlay"/>

                <Button
                    android:id="@+id/hint_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/hint_button_label"
                    android:contentDescription="@string/hint_button_content_description"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/RedButtonThemeOverlay" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions|textVisiblePassword"
                        android:hint="@string/id_field_hint"
                        />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/generate_id_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/generate_id_button_content_description"
                    app:srcCompat="@drawable/dice_24dp"
                    style="@style/SideButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textVisiblePassword"
                        android:hint="@string/password_field_hint"
                        android:typeface="monospace"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/generate_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/generate_password_button_content_description"
                    app:srcCompat="@drawable/dice_24dp"
                    style="@style/SideButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/display_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/display_name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/display_name_field_hint"
                        />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/generate_display_name_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/generate_display_name_button_content_description"
                    app:srcCompat="@drawable/dice_24dp"
                    style="@style/SideButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/federation_provider_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/federation_provider_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:hint="@string/federation_provider_field_hint"
                        />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/google_provider_button"
                    android:contentDescription="@string/google_provider_button_content_description"
                    app:srcCompat="@drawable/google_24dp"
                    style="@style/SideButton"/>

                <ImageButton
                    android:id="@+id/facebook_provider_button"
                    android:contentDescription="@string/facebook_provider_button_content_description"
                    app:srcCompat="@drawable/facebook_24dp"
                    style="@style/SideButton"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/profile_picture_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profile_picture_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:hint="@string/profile_picture_field_hint"
                        />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/profile_picture_view"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_picture_view_content_description"/>

                <ImageButton
                    android:id="@+id/generate_profile_picture_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/generate_profile_picture_button_content_description"
                    app:srcCompat="@drawable/dice_24dp"
                    style="@style/SideButton" />

            </LinearLayout>

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/clear_button_label"
                android:contentDescription="@string/clear_button_content_description"
                android:theme="@style/RedButtonThemeOverlay"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>