<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  style="@style/DemoContent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
      style="@style/Headline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/request"/>

    <LinearLayout
      android:id="@+id/save_credential"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    </LinearLayout>

    <Button
      android:id="@+id/save_button"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_gravity="center_horizontal"
      android:contentDescription="@string/save_button_content_description"
      android:text="@string/save_button_label"
      android:theme="@style/GreenButtonThemeOverlay"/>

  </LinearLayout>
</android.support.v4.widget.NestedScrollView>